fix(listing): preserve frozen evaluation rules and reject asserted outcomes